test/classes/errors/nilability-assign/assign-oknil-borrowed-from-nonnil-borrowed.chpl
//  lhs: borrowed?  rhs: borrowed!  ok

class MyClass {  var x: int;  }

var lhs: borrowed MyClass?;
var rhs = new borrowed MyClass();

lhs = rhs;


